--- a/pom.xml
+++ b/pom.xml
@@ -68,5 +68,13 @@
             </plugin>
         </plugins>
     </build>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/jakvbs/pglite-spring-boot-test</url>
+        </repository>
+    </distributionManagement>
 </project>
 
