--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,24 +1,30 @@
 name: publish
 on:
-  push:
-    branches: [ main ]
+  release:
+    types: [created]
   workflow_dispatch:
 
 jobs:
   publish:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: '21'
-          cache: 'maven'
-          server-id: github
-          server-username: GITHUB_ACTOR
-          server-password: GITHUB_TOKEN
-      - name: Deploy to GitHub Packages (snapshot)
-        run: mvn -B -DskipTests deploy
+          cache: maven
+          server-id: central
+          server-username: CENTRAL_USERNAME
+          server-password: CENTRAL_PASSWORD
+      - name: Import GPG key
+        run: |
+          echo "$SIGNING_KEY" | gpg --batch --import
+          gpg --list-secret-keys --keyid-format LONG
+        env:
+          SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
+      - name: Publish to Maven Central (auto)
+        run: mvn -B -DskipTests -Dgpg.passphrase="${{ secrets.SIGNING_PASSWORD }}" deploy
+        env:
+          CENTRAL_USERNAME: ${{ secrets.CENTRAL_USERNAME }}
+          CENTRAL_PASSWORD: ${{ secrets.CENTRAL_PASSWORD }}
