--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,34 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.euronext.pglite</groupId>
+    <groupId>io.github.jakvbs</groupId>
     <artifactId>pglite-spring-boot-test</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <name>pglite-spring-boot-test</name>
     <description>Spring Boot test auto-configuration for in-memory Postgres via PGlite (py-pglite)</description>
     <packaging>jar</packaging>
+
+    <url>https://github.com/jakvbs/pglite-spring-boot-test</url>
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    <scm>
+        <connection>scm:git:git://github.com/jakvbs/pglite-spring-boot-test.git</connection>
+        <developerConnection>scm:git:ssh://github.com/jakvbs/pglite-spring-boot-test.git</developerConnection>
+        <url>https://github.com/jakvbs/pglite-spring-boot-test</url>
+        <tag>HEAD</tag>
+    </scm>
+    <developers>
+        <developer>
+            <id>jakvbs</id>
+            <name>jakvbs</name>
+            <url>https://github.com/jakvbs</url>
+        </developer>
+    </developers>
 
     <properties>
         <java.version>21</java.version>
@@ -67,6 +89,60 @@
                 </configuration>
             </plugin>
         </plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.3.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals><goal>jar</goal></goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.10.0</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals><goal>jar</goal></goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <failOnError>false</failOnError>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>3.2.7</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals><goal>sign</goal></goals>
+                        <configuration>
+                            <gpgArguments>
+                                <arg>--pinentry-mode</arg>
+                                <arg>loopback</arg>
+                            </gpgArguments>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+              <groupId>org.sonatype.central</groupId>
+              <artifactId>central-publishing-maven-plugin</artifactId>
+              <version>0.9.0</version>
+              <extensions>true</extensions>
+              <configuration>
+                <publishingServerId>central</publishingServerId>
+                <autoPublish>true</autoPublish>
+                <waitUntil>published</waitUntil>
+              </configuration>
+            </plugin>
     </build>
 
     <distributionManagement>
